--- a/assets/style.css
+++ b/assets/style.css
@@ -240,9 +240,13 @@ img{
   width:100%;
 }
 
-
-
-
+header{
+  grid-template-columns: repeat(16, 1fr);
+  display: grid;
+}
+.logo{}
+.menu{}
+.cart{}
 
 .product{
   height: fit-content;
@@ -490,115 +494,7 @@ div#related {
 }
 /* HOME
 ================================================== */
-.oneproduct{
-    padding:20px;
-    grid-gap:20px;
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    background-color:#5FB307!important;
-}
-img.myclass1 {
-    grid-column: 4/span 6;
-      max-height: calc(100vh - 40px);
-}
-.oneproduct p {
-    grid-column: span 6;
-}
-.home_img {
-    object-fit: cover;
-    height: 100vh;
-  width:100vw;
-}
-.home_img img{
-    object-fit: cover;
-    height: 100%;
-}
-.full img{
-      object-fit: cover;
-    height: 100%;
-}
 /* FILTER
-================================================== */
-.filter-blogs{
-  margin-top: 100px;
-  padding:0px 20px 20px 20px;
-  display:flex;
-  text-transform:uppercase;
-}
-.filter_title, .filt{
-  color: #787878;
-  margin-left:20px;
-  margin-bottom:20px;
-}
-.filter-blogs li{
-    border: 1px solid transparent;
-  padding:10px;
-  background-color:#FAF8F6;
-  margin-right:5px;
-  border-radius:20px;
-}
-ul li.active{
-  border: 1px solid #000000;
-  color:black;
-}
-
-.filter-blogs li:hover{
-  border: 1px solid #000000;
-  color:black;
-}
-.article{
-  grid-column:span 3;
-}
-.collection_title{
-margin-bottom:20px;
-  font-size:24px;
-}
-.gallery_collection{
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-}
-.gallery_collection img{
- grid-column:span 3;
-}
-.credits {
-  padding: 20px;
-}
-.video {
-    grid-column: span 12;
-    grid-template-columns: repeat(12, 1fr);
-    width: 100%;
-    display: grid;
-}
-.video video{
-grid-column: 3 / span 8
-}
-.video-home{
-  width:100vw;
-  object-fit: cover;
-  height: 100%;
-}
-video.video-home {
-    height: 100vh;
-    object-fit: cover;
-}
-.video-control:not(.playing) .video-control-pause,
-.video-control.playing .video-control-play {
-	display: none;
-}
-video{
-  width: 100%;
-}
-button.video-control.bottom {
-    width: fit-content;
-    grid-column: span 6;
-}
-.collecion_information{
-  margin-bottom:100px;
-}
-.menu_open{
-  cursor:pointer;
-}
-/* SWIPER
 ================================================== */
 /* COLLECTION
 ================================================== */
@@ -644,240 +540,6 @@ button.video-control.bottom {
 /* RESPONSIVE
 ================================================== */
 @media (max-width: 800px){
-
-/* PRODUCT
-================================================== */
-  .menu{
-        margin-top: -10px;
-    display:none;
-  }
-.product {
-    grid-column: span 6;
-}
-  .thumbnail {
-height:40vh;
-}
-  footer {
-    margin-top:100px;
-    height:auto;
-    grid-gap: 20px;
-    line-height: 20px;
-}
-  .logo svg {
-    fill: black!important;
-    width: 40vw;
-    padding: 15px;
-}
-  footer form input {
-    width: 66vw;
-    padding-bottom: 3px!important;
-    border-bottom: 1px solid grey;
-}
-    footer div:nth-child(1) {
-    grid-column: span 12;
-}
-  footer div:nth-child(2) {
-        order: 2;
-    grid-column: span 12;
-}
-  footer div:nth-child(3) {
-    grid-column: span 6;
-}
-    footer div:nth-child(4) {
-    grid-column: span 6;
-}
-  .menu_open {
-    line-height: 20px;
-    align-items: center;
-    padding: 10px 20px 10px 20px;
-    display: block;
-    width: fit-content;
-    color: black;
-    position: sticky;
-    top: 0px;
-    z-index: 100;
-}
-  .nain{
-
-    display:none;
-  }
-  .menu{
-     padding: 0px 20px 10px 20px;
-      line-height: 20px;
-    display:none;
-  }
-  .cart-part {
-    text-align: right;
-    position: fixed;
-    right: 0px;
-    top: 10px;
-    display: block;
-    z-index: 101;
-}
-  .tit {
-    width: 57px;
-}
-
-.filters_shop > div {
-    padding-left: 20px;
-    grid-column: span 12;
-    display: flex;
-    margin-right: 10px;
-}
-.filters_shop {
-    row-gap: 20px;
-}
-.total {
-    grid-column: span 12;
-    padding:10px;
-}
-.info_cart {
-    grid-column: span 6;
-}
-.item {
-    grid-column: span 12;
-    grid-gap: 10px;
-}
-.article {
-    grid-column: span 6;
-}
-.page_content {
-    margin-top: 100px;
-    grid-column: span 12;
-}
-.left-side{
-  transform: none;
-  top:auto;
-  order:2;
-  grid-column: span 12;
-  }
-.product_gallery {
-    grid-template-columns: repeat(1, 1fr);
-    grid-column: span 12;
-}
-.variations #add-to-bag {
-    grid-column: 1/span 6;
-}
-.product_information > div:nth-child(1) {
-    grid-column: span 3;
-}
-  .product_information > div:nth-child(2) {
-    grid-column: span 6;
-}
-  .related-title {
-    top:0px;
-    position:relative;
-    grid-column: span 2;
-    padding: 20px;
-}
-  .product_information {
-    grid-gap: 20px;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-}
-  .product-price {
-    float:none;
-    text-align: left!important;
-}
-  .product-title{
-    float:none;
-
-  }
-  .center {
-    grid-column: 2 / span 10;
-}
-  .section div {
-    grid-column: span 12;
-}
-  .section.green div:nth-child(1) {
-    grid-column: span 12!important;
-}
-  .info_cart {
-    background: #FAF8F6;
-    padding: 10px;
-    display: grid;
-    row-gap: 10px;
-    grid-column: span 6;
-    grid-template-columns: repeat(1,1fr);
-}
-  .remove{
-    grid-column:span 6;
-  }
-  .item-title {
-    grid-column: span 1;
-}
-  .item-variations {
-    grid-column: span 1;
-}
-  .item-quantity {
-    grid-template-columns: repeat(3,1fr);
-    display: grid;
-    grid-column: span 1;
-    height: fit-content;
-}
-    .quantity-wrap {
-    text-align: center;
-}
-  .quantity-button {
-    text-align: center;
-}
-  .cart-part {
-    line-height: 20px;
-    text-align: right;
-    position: fixed;
-    right: 0px;
-    top: 10px;
-    display: block;
-    z-index: 101;
-}
-  .gallery_collection img {
-    grid-column: span 6;
-}
-  .filter{
-  display:flex;
-  text-transform:uppercase;
-  cursor:pointer;
-}
-  .filters_shop.open {
-    line-height: 20px;
-    display: grid!important;
-}
-.filter-menu{
-  background: rgba(222, 222, 217, 0.5);
-  backdrop-filter: blur(25px);
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-footer{
-    bottom:20px;
-  }
-  form#newsletter2 input#email {
-    grid-column: span 12;
-    padding-bottom: 2px!important;
-    border-bottom: 1px solid grey:
-}
-form#newsletter2 button {
-    background-color: #5FB307;
-    padding: 10px!important;
-    grid-column: span 12;
-}
-form#newsletter button {
-    background-color: white;
-    padding: 10px!important;
-    grid-column: span 12;
-    border:1px solid grey!important;
-}
-form#newsletter input#email {
-    grid-column: span 12;
-    width: 100%;
-}
-form#newsletter {
-    row-gap:20px;
-    /* display: flex; */
-    grid-column: 1/span 12;
-    align-self: end;
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
 }
 /*BIGGER DESKTOP*/
 @media (min-width: 1920px){
