--- a/assets/style.css
+++ b/assets/style.css
@@ -243,6 +243,8 @@ img{
 header{
   grid-template-columns: repeat(16, 1fr);
   display: grid;
+  padding:20px;
+  grid-gap:12px;
 }
 .logo{}
 .menu{}
