--- a/assets/style.css
+++ b/assets/style.css
@@ -241,12 +241,14 @@ img{
 }
 
 header{
-  grid-template-columns: repeat(16, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   display: grid;
   padding:20px;
   grid-gap:12px;
 }
-.logo{}
+.logo{
+  grid-column: span 3;
+}
 .menu{}
 .cart{}
 
