--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -80,34 +80,36 @@ fernandoepeso.info
   </div>
   <!--Header-->
   <header id="header">
-    <svg id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="281" height="36.6" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
-      <defs>
-        <clipPath id="uuid-8b8395cb-a441-4722-8ae2-c73d36cb9a27">
-          <rect y="0" width="281" height="36.6" style="fill: none;"/>
-        </clipPath>
-        <clipPath id="uuid-37db10a3-7384-4dc1-987f-d46e4e2625d0">
-          <rect y="0" width="281" height="36.6" style="fill: none;"/>
-        </clipPath>
-      </defs>
-      <g style="clip-path: url(#uuid-8b8395cb-a441-4722-8ae2-c73d36cb9a27);">
-        <path d="m254.63,14.54c1.25-4.76,4.81-7.52,9.63-7.52,5.36,0,8.52,3.51,8.77,7.52h-18.4Zm26.37,2.76C281,8.42,275.48,0,264.26,0s-17.75,8.52-17.75,18.3c0,10.98,7.12,18.3,18.05,18.3,7.82,0,12.99-3.41,16.29-7.47l-5.16-5.26c-2.31,3.21-5.57,5.61-10.48,5.61-5.57,0-10.03-2.91-10.93-8.67h26.57c.05-.45.15-1.35.15-3.51"/>
-        <path d="m120.76.54c-1.19-.28-2.46-.39-3.94-.39-1.94,0-4.5.4-6.35,1.16-.21.09-.38.25-.49.45l-2.11,3.97c-.17.33-.51.53-.88.53-.55,0-1-.45-1-1V1.75c0-.55-.45-1-1-1h-5.27c-.55,0-1,.45-1,1v33.09c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1v-17.65c0-6.77,5.01-9.38,9.38-9.38,2.36,0,4.36.45,5.77,1.05h.05V1.52c0-.46-.32-.87-.77-.98"/>
-        <path d="m76.3,29.28c-6.02,0-9.83-5.11-9.83-10.98s3.81-11.03,9.83-11.03c6.37,0,9.73,5.16,9.73,11.03s-3.36,10.98-9.73,10.98M92.4.75h-5.62c-.55,0-1,.45-1,1v3.51c0,.55-.45,1-1,1-.37,0-.71-.2-.88-.53l-2.13-4c-.1-.18-.24-.33-.42-.42-1.65-.84-3.6-1.16-5.69-1.16-9.27,0-17,6.97-17,18.15,0,10.58,7.22,18.1,16.29,18.1,2.35,0,4.88-.44,6.39-1.16.19-.09.33-.24.43-.42l2.13-4c.17-.33.51-.53.88-.53.55,0,1,.45,1,1v3.56c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V1.75c0-.55-.45-1-1-1"/>
-        <path d="m40.66.15c-2.39,0-5.41.63-6.67,1.16-.19.08-.35.22-.46.39l-2.56,4.09c-.18.29-.51.47-.85.47h-.3c-.37,0-.69-.21-.87-.53C27.15,2.41,23.58.15,18.2.15c-2.36,0-5.3.66-6.62,1.16-.23.09-.41.25-.52.46l-2.11,3.96c-.17.33-.51.53-.89.53-.55,0-1-.45-1-1V1.75c0-.55-.45-1-1-1H1C.45.75,0,1.2,0,1.75v33.09c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V15.49c0-5.16,3.36-8.07,8.02-8.07,5.67,0,7.52,3.71,7.52,7.87v19.55c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V15.49c0-5.16,3.46-8.07,8.12-8.07,5.67,0,7.42,3.71,7.42,7.87v19.55c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V14.19c0-7.77-3.76-14.04-13.28-14.04"/>
-      </g>
-      <rect x="198.83" y=".75" width="7.62" height="35.09"/>
-      <polygon points="238.03 .75 229.66 28.83 227.36 28.83 218.98 .75 211.11 .75 221.59 35.85 235.48 35.85 245.91 .75 238.03 .75"/>
-      <g style="clip-path: url(#uuid-37db10a3-7384-4dc1-987f-d46e4e2625d0);">
-        <path d="m142.83,29.38c-5.76,0-10.68-4.21-10.68-11.18s4.86-10.98,10.58-10.98c4.61,0,7.12,1.81,9.22,4.66l5.21-5.16c-3.31-4.11-7.92-6.72-14.39-6.72-10.58,0-18.4,7.02-18.4,18.35s7.47,18.25,18.35,18.25c6.47,0,11.73-2.71,14.94-7.02l-5.01-5.37c-2.41,3.21-5.62,5.16-9.83,5.16"/>
-      </g>
-      <polygon points="185.9 .75 185.9 14.09 169.3 14.09 169.3 .75 161.68 .75 161.68 35.85 169.3 35.85 169.3 21.11 185.9 21.11 185.9 35.85 193.52 35.85 193.52 .75 185.9 .75"/>
-    </svg>
-    	<div class="menu">
+    <div class="logo">
+      <svg id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="281" height="36.6" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
+        <defs>
+          <clipPath id="uuid-8b8395cb-a441-4722-8ae2-c73d36cb9a27">
+            <rect y="0" width="281" height="36.6" style="fill: none;"/>
+          </clipPath>
+          <clipPath id="uuid-37db10a3-7384-4dc1-987f-d46e4e2625d0">
+            <rect y="0" width="281" height="36.6" style="fill: none;"/>
+          </clipPath>
+        </defs>
+        <g style="clip-path: url(#uuid-8b8395cb-a441-4722-8ae2-c73d36cb9a27);">
+          <path d="m254.63,14.54c1.25-4.76,4.81-7.52,9.63-7.52,5.36,0,8.52,3.51,8.77,7.52h-18.4Zm26.37,2.76C281,8.42,275.48,0,264.26,0s-17.75,8.52-17.75,18.3c0,10.98,7.12,18.3,18.05,18.3,7.82,0,12.99-3.41,16.29-7.47l-5.16-5.26c-2.31,3.21-5.57,5.61-10.48,5.61-5.57,0-10.03-2.91-10.93-8.67h26.57c.05-.45.15-1.35.15-3.51"/>
+          <path d="m120.76.54c-1.19-.28-2.46-.39-3.94-.39-1.94,0-4.5.4-6.35,1.16-.21.09-.38.25-.49.45l-2.11,3.97c-.17.33-.51.53-.88.53-.55,0-1-.45-1-1V1.75c0-.55-.45-1-1-1h-5.27c-.55,0-1,.45-1,1v33.09c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1v-17.65c0-6.77,5.01-9.38,9.38-9.38,2.36,0,4.36.45,5.77,1.05h.05V1.52c0-.46-.32-.87-.77-.98"/>
+          <path d="m76.3,29.28c-6.02,0-9.83-5.11-9.83-10.98s3.81-11.03,9.83-11.03c6.37,0,9.73,5.16,9.73,11.03s-3.36,10.98-9.73,10.98M92.4.75h-5.62c-.55,0-1,.45-1,1v3.51c0,.55-.45,1-1,1-.37,0-.71-.2-.88-.53l-2.13-4c-.1-.18-.24-.33-.42-.42-1.65-.84-3.6-1.16-5.69-1.16-9.27,0-17,6.97-17,18.15,0,10.58,7.22,18.1,16.29,18.1,2.35,0,4.88-.44,6.39-1.16.19-.09.33-.24.43-.42l2.13-4c.17-.33.51-.53.88-.53.55,0,1,.45,1,1v3.56c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V1.75c0-.55-.45-1-1-1"/>
+          <path d="m40.66.15c-2.39,0-5.41.63-6.67,1.16-.19.08-.35.22-.46.39l-2.56,4.09c-.18.29-.51.47-.85.47h-.3c-.37,0-.69-.21-.87-.53C27.15,2.41,23.58.15,18.2.15c-2.36,0-5.3.66-6.62,1.16-.23.09-.41.25-.52.46l-2.11,3.96c-.17.33-.51.53-.89.53-.55,0-1-.45-1-1V1.75c0-.55-.45-1-1-1H1C.45.75,0,1.2,0,1.75v33.09c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V15.49c0-5.16,3.36-8.07,8.02-8.07,5.67,0,7.52,3.71,7.52,7.87v19.55c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V15.49c0-5.16,3.46-8.07,8.12-8.07,5.67,0,7.42,3.71,7.42,7.87v19.55c0,.55.45,1,1,1h5.62c.55,0,1-.45,1-1V14.19c0-7.77-3.76-14.04-13.28-14.04"/>
+        </g>
+        <rect x="198.83" y=".75" width="7.62" height="35.09"/>
+        <polygon points="238.03 .75 229.66 28.83 227.36 28.83 218.98 .75 211.11 .75 221.59 35.85 235.48 35.85 245.91 .75 238.03 .75"/>
+        <g style="clip-path: url(#uuid-37db10a3-7384-4dc1-987f-d46e4e2625d0);">
+          <path d="m142.83,29.38c-5.76,0-10.68-4.21-10.68-11.18s4.86-10.98,10.58-10.98c4.61,0,7.12,1.81,9.22,4.66l5.21-5.16c-3.31-4.11-7.92-6.72-14.39-6.72-10.58,0-18.4,7.02-18.4,18.35s7.47,18.25,18.35,18.25c6.47,0,11.73-2.71,14.94-7.02l-5.01-5.37c-2.41,3.21-5.62,5.16-9.83,5.16"/>
+        </g>
+        <polygon points="185.9 .75 185.9 14.09 169.3 14.09 169.3 .75 161.68 .75 161.68 35.85 169.3 35.85 169.3 21.11 185.9 21.11 185.9 35.85 193.52 35.85 193.52 .75 185.9 .75"/>
+      </svg>
+    </div>
+    <div class="menu">
             {% for link in linklists.main-menu.links %}
             <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
             {% endfor %}
-    	</div>
-      <div class="cart-part">
+    </div>
+    <div class="cart-part">
             {% for link in linklists.top-bar.links %}
               <li class="nain" {% if link.active %}class="active"{% endif %}><a href="{{ link.url }}">{{ link.title }}</a></li>
             {% endfor %}
