--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -105,9 +105,12 @@ fernandoepeso.info
       </svg>
     </div>
     <div class="menu">
-            {% for link in linklists.main-menu.links %}
+      <div>Designers</div>
+      <div>Categories</div>
+      <div>About</div>
+            <!-- {% for link in linklists.main-menu.links %}
             <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
-            {% endfor %}
+            {% endfor %} -->
     </div>
     <div class="cart-part">
             {% for link in linklists.top-bar.links %}
