--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -105,8 +105,24 @@ fernandoepeso.info
       </svg>
     </div>
     <div class="menu">
-      <div>Designers</div>
-      <div>Categories</div>
+      <div class="designers">
+        <div class="link">Designers</div>
+        <div class="dropdown">
+          <li><a>Alexander Wang</a></li>
+          <li><a>Peter Loius</a></li>
+          <li><a>Donatela Versacce</a></li>
+          <li><a>Christian Dior</a></li>
+        </div>
+      </div>
+      <div class="categories">
+        <div class="link">Categoriees</div>
+        <div class="dropdown">
+          <li><a>Alexander Wang</a></li>
+          <li><a>Peter Loius</a></li>
+          <li><a>Donatela Versacce</a></li>
+          <li><a>Christian Dior</a></li>
+        </div>
+      </div>
       <div>About</div>
             <!-- {% for link in linklists.main-menu.links %}
             <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
