--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -105,7 +105,7 @@ fernandoepeso.info
       </svg>
     </div>
     <div class="menu">
-      <div class="designers">
+      <div class="drop">
         <div class="link">Designers</div>
         <div class="dropdown">
           <li><a>Alexander Wang</a></li>
@@ -114,7 +114,7 @@ fernandoepeso.info
           <li><a>Christian Dior</a></li>
         </div>
       </div>
-      <div class="categories">
+      <div class="drop">
         <div class="link">Categoriees</div>
         <div class="dropdown">
           <li><a>Alexander Wang</a></li>
