--- a/assets/style.css
+++ b/assets/style.css
@@ -249,6 +249,13 @@ header{
   color: white;
   background-color: red;
   grid-column: span 1;
+  border:0.5px solid;
+}
+.link-about{
+  color: white;
+  background-color: red;
+  grid-column: span 1;
+  border:0.5px solid;
 }
 .dropdown{
   background-color: grey;
