--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -123,7 +123,7 @@ fernandoepeso.info
           <li><a>Christian Dior</a></li>
         </div>
       </div>
-      <div>About</div>
+      <div class="link-about">About</div>
             <!-- {% for link in linklists.main-menu.links %}
             <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
             {% endfor %} -->
