--- a/assets/style.css
+++ b/assets/style.css
@@ -252,6 +252,8 @@ header{
   border:0.5px solid black;
 }
 .link-about{
+  padding: 2px;
+  height: fit-content;
   color: white;
   grid-column: span 1;
   border:0.5px solid;
