--- a/assets/style.css
+++ b/assets/style.css
@@ -260,6 +260,10 @@ header{
   background-color: white;
   grid-column: span 2;
 }
+.dropdown li a{
+  border:0.5px solid black;
+  padding: 2px;
+}
 .cart{}
 
 .product{
