--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -108,19 +108,19 @@ fernandoepeso.info
       <div class="drop">
         <div class="link">Designers</div>
         <div class="dropdown">
-          <li><a>Alexander Wang</a></li>
-          <li><a>Peter Loius</a></li>
-          <li><a>Donatela Versacce</a></li>
-          <li><a>Christian Dior</a></li>
+          <div><a>Alexander Wang</a></div>
+          <div><a>Peter Loius</a><div>
+          <div><a>Donatela Versacce</a><div>
+          <div><a>Christian Dior</a><div>
         </div>
       </div>
       <div class="drop">
         <div class="link">Categoriees</div>
         <div class="dropdown">
-          <li><a>Alexander Wang</a></li>
-          <li><a>Peter Loius</a></li>
-          <li><a>Donatela Versacce</a></li>
-          <li><a>Christian Dior</a></li>
+          <div><a>Alexander Wang</a><div>
+          <div><a>Peter Loius</a><div>
+          <div><a>Donatela Versacce</a><div>
+          <div><a>Christian Dior</a><div>
         </div>
       </div>
       <div class="link-about">About</div>
