--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -109,18 +109,18 @@ fernandoepeso.info
         <div class="link">Designers</div>
         <div class="dropdown">
           <div><a>Alexander Wang</a></div>
-          <div><a>Peter Loius</a><div>
-          <div><a>Donatela Versacce</a><div>
-          <div><a>Christian Dior</a><div>
+          <div><a>Peter Loius</a></div>
+          <div><a>Donatela Versacce</a></div>
+          <div><a>Christian Dior</a></div>
         </div>
       </div>
       <div class="drop">
         <div class="link">Categoriees</div>
         <div class="dropdown">
-          <div><a>Alexander Wang</a><div>
-          <div><a>Peter Loius</a><div>
-          <div><a>Donatela Versacce</a><div>
-          <div><a>Christian Dior</a><div>
+          <div><a>Alexander Wang</a></div>
+          <div><a>Peter Loius</a></div>
+          <div><a>Donatela Versacce</a></div>
+          <div><a>Christian Dior</a></div>
         </div>
       </div>
       <div class="link-about">About</div>
