--- a/assets/style.css
+++ b/assets/style.css
@@ -260,7 +260,7 @@ header{
   background-color: white;
   grid-column: span 2;
 }
-.dropdown li a{
+.dropdown>div{
   border:0.5px solid black;
   padding: 2px;
   width: 100%;
