--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -130,22 +130,21 @@ fernandoepeso.info
     </div>
     <div class="cart-part">
             {% for link in linklists.top-bar.links %}
-              <li class="nain" {% if link.active %}class="active"{% endif %}><a href="{{ link.url }}">{{ link.title }}</a></li>
+            <li class="nain" {% if link.active %}class="active"{% endif %}><a href="{{ link.url }}">{{ link.title }}</a></li>
             {% endfor %}
-
             <li>
               <a id="cart" {% if template == 'cart' %}  style="color:green;"{% endif %} href="/cart">
-                BAG (&nbsp;<span class="cart-total">
+                BAG <span class="cart-total">
                     {%- if cart.item_count == 0 -%}
                     0
                     {%- else -%}
                     {{- cart.item_count -}}
                     {%- endif -%}
-                </span>&nbsp;)
+                </span>
               </a>
           </li>
-  	    </div>
-      </div>
+  	  </div>
+  </div>
   </header>
   {% if template == 'index'%}
   {%- else -%}
