--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -130,15 +130,17 @@ fernandoepeso.info
     </div>
     <div class="cart-part">
         <div id="cart">
-          <div class="baggie"><a {% if template == 'cart' %}  style="color:green;" {% endif %} href="/cart"></a>Cart</div>
-          <div class="cart-total">
-              {%- if cart.item_count == 0 -%}
-              0
-              {%- else -%}
-              {{- cart.item_count -}}
-              {%- endif -%}
+          <div class="baggie">
+              <a {% if template == 'cart' %}  style="color:green;" {% endif %} href="/cart">Cart</a>
           </div>
-      </div>
+          <div class="cart-total">
+                {%- if cart.item_count == 0 -%}
+                0
+                {%- else -%}
+                {{- cart.item_count -}}
+                {%- endif -%}
+          </div>
+        </div>
   	 </div>
   </div>
   </header>
