--- a/assets/style.css
+++ b/assets/style.css
@@ -266,7 +266,14 @@ header{
   padding: 2px;
   width: 100%;
 }
-.cart{}
+.cart{
+  display: flex;
+  justify-content: space-between;
+}
+.cart:nth-child(2){
+  width: 30px;
+  text-align: center;
+}
 
 .product{
   height: fit-content;
