--- a/assets/style.css
+++ b/assets/style.css
@@ -267,7 +267,7 @@ header{
   width: 100%;
 }
 #cart{
-  border:0.5px;
+  border:0.5px solid black;
   display: flex;
   justify-content: space-between;
 }
