--- a/assets/style.css
+++ b/assets/style.css
@@ -267,11 +267,12 @@ header{
   width: 100%;
 }
 #cart{
+  padding: 2px;
   border:0.5px solid black;
   display: flex;
   justify-content: space-between;
 }
-#cart:nth-child(2){
+#cart .cart-total{
   width: 30px;
   border-left:0.5px;
   text-align: center;
