--- a/assets/style.css
+++ b/assets/style.css
@@ -266,6 +266,9 @@ header{
   padding: 2px;
   width: 100%;
 }
+.cart-part{
+  grid-column: span 3;
+}
 #cart{
   padding: 2px;
   border:0.5px solid black;
