--- a/assets/style.css
+++ b/assets/style.css
@@ -267,15 +267,18 @@ header{
   width: 100%;
 }
 .cart-part{
-  grid-column: span 3;
+  grid-column: span 2;
 }
 #cart{
-  padding: 2px;
   border:0.5px solid black;
   display: flex;
   justify-content: space-between;
 }
+.baggie{
+  padding: 2px;
+}
 #cart .cart-total{
+  padding: 2px;
   width: 30px;
   border-left:0.5px;
   text-align: center;
