--- a/assets/style.css
+++ b/assets/style.css
@@ -280,7 +280,7 @@ header{
 #cart .cart-total{
   padding: 2px;
   width: 30px;
-  border-left:0.5px;
+  border-left:0.5px solid black;
   text-align: center;
 }
 
