--- a/assets/style.css
+++ b/assets/style.css
@@ -261,6 +261,7 @@ header{
   border:0.5px solid;
 }
 .dropdown{
+  margin-top: -1px;
   border-left:0.5px solid black;
   border-top:0.5px solid black;
   border-right:0.5px solid black;
