--- a/assets/style.css
+++ b/assets/style.css
@@ -253,6 +253,9 @@ header{
   grid-column: span 1;
   border:0.5px solid black;
 }
+.link, .link-about:hover{
+  background-color: black;
+}
 .link-about{
   padding: 2px;
   height: fit-content;
