--- a/assets/style.css
+++ b/assets/style.css
@@ -276,7 +276,7 @@ header{
   grid-column: span 2;
 }
 .dropdown>div{
-  border-bottom:0.5px solid black;
+  border-bottom:0.5px solid;
   padding: 2px;
   width: 100%;
 }
