--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -121,6 +121,18 @@ fernandoepeso.info
           <div><a>Peter Loius</a></div>
           <div><a>Donatela Versacce</a></div>
           <div><a>Christian Dior</a></div>
+          <div><a>Alexander Wang</a></div>
+          <div><a>Peter Loius</a></div>
+          <div><a>Donatela Versacce</a></div>
+          <div><a>Christian Dior</a></div>
+          <div><a>Alexander Wang</a></div>
+          <div><a>Peter Loius</a></div>
+          <div><a>Donatela Versacce</a></div>
+          <div><a>Christian Dior</a></div>
+          <div><a>Alexander Wang</a></div>
+          <div><a>Peter Loius</a></div>
+          <div><a>Donatela Versacce</a></div>
+          <div><a>Christian Dior</a></div>
         </div>
       </div>
       <div class="link-about">About</div>
