--- a/assets/style.css
+++ b/assets/style.css
@@ -259,6 +259,7 @@ header{
   grid-column: 3/ span 7;
 }
 .drop{
+  height: fit-content;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column:span 2;
