--- a/assets/style.css
+++ b/assets/style.css
@@ -276,13 +276,13 @@ header{
 }
 .link-about:hover{
   background-color: var(--black);
-  color: var(--white);;
+  color: var(--white);
 }
 .link-about{
   padding: 2px;
   height: fit-content;
   grid-column: span 1;
-  border:0.5px solid;
+  border:0.5px solid black;
 }
 .dropdown{
   margin-top: -1px;
