--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -115,7 +115,7 @@ fernandoepeso.info
         </div>
       </div>
       <div class="drop">
-        <div class="link">Categoriees</div>
+        <div class="link">Categories</div>
         <div class="dropdown">
           <div><a>Alexander Wang</a></div>
           <div><a>Peter Loius</a></div>
