--- a/assets/style.css
+++ b/assets/style.css
@@ -266,6 +266,7 @@ header{
   grid-column:span 2;
 }
 .link{
+  padding-left: 5px;
   cursor: pointer;
   padding: 2px;
   grid-column: span 1;
@@ -286,6 +287,7 @@ header{
   border:0.5px solid black;
 }
 .dropdown{
+  padding-left: 5px;
   margin-top: -1px;
   border-left:0.5px solid var(--black);
   border-top:0.5px solid var(--black);
