--- a/assets/style.css
+++ b/assets/style.css
@@ -266,7 +266,7 @@ header{
   grid-column:span 2;
 }
 .link{
-  padding-left: 5px;
+  padding-left: 5px!important;
   cursor: pointer;
   padding: 2px;
   grid-column: span 1;
@@ -295,7 +295,7 @@ header{
   grid-column: span 2;
 }
 .dropdown>div{
-  padding-left: 5px;
+  padding-left: 5px!important;
   border-bottom:0.5px solid;
   padding: 2px;
   width: 100%;
