--- a/assets/style.css
+++ b/assets/style.css
@@ -340,6 +340,7 @@ header{
   border-bottom: 0.5px solid var(--black);
 }
 .product:hover >div:nth-child(even) {
+  border-left: 0.5px solid var(--black);
 }
 .product:hover span.box {
   height: 100%;
