--- a/assets/style.css
+++ b/assets/style.css
@@ -393,13 +393,13 @@ span.box {
   width: 100%;
 }
 .sold-out{
-  color:#9B9B9B;
+  color:var(--white);
   padding:2px;
   position: absolute;
   top: 50%;
   transform: translate(0%,-50%);
   left: 0px;
-  background-color: var(--white);;
+  background-color: var(--black);;
 }
 .colors {
   position: absolute;
