--- a/assets/style.css
+++ b/assets/style.css
@@ -260,7 +260,6 @@ header{
   grid-column: 4/ span 7;
 }
 .drop{
-  display: none;
   height: fit-content;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -289,7 +288,11 @@ header{
   grid-column: span 1;
   border:0.5px solid black;
 }
+.dropped{
+  display: block;
+}
 .dropdown{
+  display: none;
   margin-top: -1px;
   border-left:0.5px solid var(--black);
   border-top:0.5px solid var(--black);
