--- a/assets/style.css
+++ b/assets/style.css
@@ -302,7 +302,7 @@ header{
 }
 .dropdown>div{
   padding-left: 5px!important;
-  border-bottom:0.5px solid;
+  border-bottom:0.5px solid black;
   padding: 2px;
   width: 100%;
 }
