--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -103,6 +103,7 @@ fernandoepeso.info
         </g>
         <polygon points="185.9 .75 185.9 14.09 169.3 14.09 169.3 .75 161.68 .75 161.68 35.85 169.3 35.85 169.3 21.11 185.9 21.11 185.9 35.85 193.52 35.85 193.52 .75 185.9 .75"/>
       </svg>
+      <div class="switch-view">switch view</div>
     </div>
     <div class="menu">
       <div class="drop">
@@ -165,7 +166,6 @@ fernandoepeso.info
   {%- endif -%}
   {{ content_for_layout }}
   <footer>
-      Footer
   </footer>
   {%- if template contains 'product' -%}
     {{ 'global-product.js' | asset_url | script_tag }}
