--- a/assets/style.css
+++ b/assets/style.css
@@ -288,6 +288,13 @@ header{
   grid-column: span 1;
   border:0.5px solid black;
 }
+.switch-view{
+  back-drop-filter:blur(20px);
+  padding: 2px;
+  height: fit-content;
+  grid-column: span 1;
+  border:0.5px solid black;
+}
 .dropdown.dropped{
   display: block;
 }
