--- a/assets/style.css
+++ b/assets/style.css
@@ -291,8 +291,8 @@ header{
 .switch-view{
   back-drop-filter:blur(20px);
   padding: 2px;
+  width: 50px;
   height: fit-content;
-  grid-column: span 1;
   border:0.5px solid black;
 }
 .dropdown.dropped{
