--- a/assets/style.css
+++ b/assets/style.css
@@ -346,6 +346,9 @@ header{
   grid-template-columns: repeat(4, 1fr);
   display:grid;
 }
+.product.dropped .info-product{
+  grid-column: span 3;
+}
 .product:hover .main-information {
   border-top: 0.5px solid var(--black);
   border-right: 0.5px solid var(--black);
