--- a/assets/style.css
+++ b/assets/style.css
@@ -231,6 +231,9 @@ footer{
   display: grid;
   grid-template-columns: repeat(12,1fr);
 }
+#products.dropped{
+    grid-template-columns: repeat(16,1fr);
+}
 .product.active-size,
 .product.active-color{
   display: none;
@@ -291,7 +294,7 @@ header{
 .switch-view{
   back-drop-filter:blur(20px);
   padding: 2px;
-  width: 50px;
+  width:auto;
   height: fit-content;
   border:0.5px solid black;
 }
