--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,6 +113,7 @@ fernandoepeso.info
           <div><a>Peter Loius</a></div>
           <div><a>Donatela Versacce</a></div>
           <div><a>Christian Dior</a></div>
+          <div><a>View all</a></div>
         </div>
       </div>
       <div class="drop">
@@ -133,7 +134,7 @@ fernandoepeso.info
           <div><a>Alexander Wang</a></div>
           <div><a>Peter Loius</a></div>
           <div><a>Donatela Versacce</a></div>
-          <div><a>Christian Dior</a></div>
+          <div><a>View all</a></div>
         </div>
       </div>
       <div class="link-about">About</div>
