--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -64,7 +64,7 @@
           <div class="main-information">
             <div class="info-product">
               <div>Designer</div>
-              <div class="link">Alexander Wang</div>
+              <div class="hov">Alexander Wang</div>
             </div>
             <div class="info-product">
               <div>Era</div>
