--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -72,7 +72,7 @@
             </div>
             <div class="info-product">
               <div>Item</div>
-              <div><a href="{{ product.url }}">{{ product.title}}</a></div>
+              <div class="hov"><a href="{{ product.url }}">{{ product.title}}</a></div>
             </div>
             <div class="info-product">
               <div><a>Price</a></div>
