--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -79,6 +79,7 @@
 {% endif %}
 {% endfor %}
 
+{% include 'related' %}
 <script>
   //PRODUCT FUNCTIONS
   var selectCallback = function(variant, selector){
