--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -72,12 +72,12 @@
               {% endfor %}
     </div>
 </div>
-{% assign variants = 0 %}
+<!-- {% assign variants = 0 %}
 {% for option in product.options %}
 {% if product.options.first != 'Title' %}
 {% assign variants = variants | plus: 1 %}
 {% endif %}
-{% endfor %}
+{% endfor %} -->
 
 {% include 'related' %}
 <script>
